// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table > Table *Check callback for add list of new data 1`] = `
<div>
  <div>
    <button>
      Add New Row
    </button>
  </div>
  <div>
    <div>
      name
    </div>
    <div>
      surname
    </div>
    <div>
      age
    </div>
    <div>
      email
    </div>
    <div>
      company
    </div>
    <div>
      actions
    </div>
  </div>
  <div>
    <div>
      Janis
    </div>
    <div>
      Berzins
    </div>
    <div>
      10
    </div>
    <div>
      mail@mail.ll
    </div>
    <div>
      Some company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Peteris
    </div>
    <div>
      Klavins
    </div>
    <div>
      20
    </div>
    <div>
      rail@mail.ll
    </div>
    <div>
      One company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Zane
    </div>
    <div>
      Kocina
    </div>
    <div>
      25
    </div>
    <div>
      nail@mail.ll
    </div>
    <div>
      Second company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Janis
    </div>
    <div>
      Berzins
    </div>
    <div>
      10
    </div>
    <div>
      mail@mail.ll
    </div>
    <div>
      Some company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Peteris
    </div>
    <div>
      Klavins
    </div>
    <div>
      20
    </div>
    <div>
      rail@mail.ll
    </div>
    <div>
      One company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Zane
    </div>
    <div>
      Kocina
    </div>
    <div>
      25
    </div>
    <div>
      nail@mail.ll
    </div>
    <div>
      Second company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`Table > Table *Check callback for add new 1`] = `
<div>
  <div>
    <button>
      Add New Row
    </button>
  </div>
  <div>
    <div>
      name
    </div>
    <div>
      surname
    </div>
    <div>
      age
    </div>
    <div>
      email
    </div>
    <div>
      company
    </div>
    <div>
      actions
    </div>
  </div>
  <div>
    <div>
      Janis
    </div>
    <div>
      Berzins
    </div>
    <div>
      10
    </div>
    <div>
      mail@mail.ll
    </div>
    <div>
      Some company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Peteris
    </div>
    <div>
      Klavins
    </div>
    <div>
      20
    </div>
    <div>
      rail@mail.ll
    </div>
    <div>
      One company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Zane
    </div>
    <div>
      Kocina
    </div>
    <div>
      25
    </div>
    <div>
      nail@mail.ll
    </div>
    <div>
      Second company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Janis
    </div>
    <div>
      Berzins
    </div>
    <div>
      10
    </div>
    <div>
      mail@mail.ll
    </div>
    <div>
      Some company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`Table > Table *Check callback for delete row 1`] = `
<div>
  <div>
    <button>
      Add New Row
    </button>
  </div>
  <div>
    <div>
      name
    </div>
    <div>
      surname
    </div>
    <div>
      age
    </div>
    <div>
      email
    </div>
    <div>
      company
    </div>
    <div>
      actions
    </div>
  </div>
  <div>
    <div>
      Peteris
    </div>
    <div>
      Klavins
    </div>
    <div>
      20
    </div>
    <div>
      rail@mail.ll
    </div>
    <div>
      One company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Zane
    </div>
    <div>
      Kocina
    </div>
    <div>
      25
    </div>
    <div>
      nail@mail.ll
    </div>
    <div>
      Second company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`Table > Table *Check callback for delete row, incorrect id 1`] = `
<div>
  <div>
    <button>
      Add New Row
    </button>
  </div>
  <div>
    <div>
      name
    </div>
    <div>
      surname
    </div>
    <div>
      age
    </div>
    <div>
      email
    </div>
    <div>
      company
    </div>
    <div>
      actions
    </div>
  </div>
  <div>
    <div>
      Janis
    </div>
    <div>
      Berzins
    </div>
    <div>
      10
    </div>
    <div>
      mail@mail.ll
    </div>
    <div>
      Some company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Peteris
    </div>
    <div>
      Klavins
    </div>
    <div>
      20
    </div>
    <div>
      rail@mail.ll
    </div>
    <div>
      One company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Zane
    </div>
    <div>
      Kocina
    </div>
    <div>
      25
    </div>
    <div>
      nail@mail.ll
    </div>
    <div>
      Second company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`Table > Table *Check callback for update data 1`] = `
<div>
  <div>
    <button>
      Add New Row
    </button>
  </div>
  <div>
    <div>
      name
    </div>
    <div>
      surname
    </div>
    <div>
      age
    </div>
    <div>
      email
    </div>
    <div>
      company
    </div>
    <div>
      actions
    </div>
  </div>
  <div>
    <div>
      New name
    </div>
    <div>
      New surname
    </div>
    <div>
      33
    </div>
    <div>
      new@mail.co
    </div>
    <div>
      New company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Peteris
    </div>
    <div>
      Klavins
    </div>
    <div>
      20
    </div>
    <div>
      rail@mail.ll
    </div>
    <div>
      One company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Zane
    </div>
    <div>
      Kocina
    </div>
    <div>
      25
    </div>
    <div>
      nail@mail.ll
    </div>
    <div>
      Second company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`Table > Table *Check callback for update data, incorrect id 1`] = `
<div>
  <div>
    <button>
      Add New Row
    </button>
  </div>
  <div>
    <div>
      name
    </div>
    <div>
      surname
    </div>
    <div>
      age
    </div>
    <div>
      email
    </div>
    <div>
      company
    </div>
    <div>
      actions
    </div>
  </div>
  <div>
    <div>
      Janis
    </div>
    <div>
      Berzins
    </div>
    <div>
      10
    </div>
    <div>
      mail@mail.ll
    </div>
    <div>
      Some company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Peteris
    </div>
    <div>
      Klavins
    </div>
    <div>
      20
    </div>
    <div>
      rail@mail.ll
    </div>
    <div>
      One company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Zane
    </div>
    <div>
      Kocina
    </div>
    <div>
      25
    </div>
    <div>
      nail@mail.ll
    </div>
    <div>
      Second company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`Table > Table *Snapshot, simple render 1`] = `
<div>
  <div>
    <button>
      Add New Row
    </button>
  </div>
  <div>
    <div>
      name
    </div>
    <div>
      surname
    </div>
    <div>
      age
    </div>
    <div>
      email
    </div>
    <div>
      company
    </div>
    <div>
      actions
    </div>
  </div>
  <div>
    <div>
      Janis
    </div>
    <div>
      Berzins
    </div>
    <div>
      10
    </div>
    <div>
      mail@mail.ll
    </div>
    <div>
      Some company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Peteris
    </div>
    <div>
      Klavins
    </div>
    <div>
      20
    </div>
    <div>
      rail@mail.ll
    </div>
    <div>
      One company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
  <div>
    <div>
      Zane
    </div>
    <div>
      Kocina
    </div>
    <div>
      25
    </div>
    <div>
      nail@mail.ll
    </div>
    <div>
      Second company
    </div>
    <div
      class=""
    >
      <button>
        Edit
      </button>
      <button>
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`Table > Table *Snapshot, simple render, no initial data 1`] = `
<div>
  <div>
    <button>
      Add New Row
    </button>
  </div>
  <div>
    <div>
      name
    </div>
    <div>
      surname
    </div>
    <div>
      age
    </div>
    <div>
      email
    </div>
    <div>
      company
    </div>
    <div>
      actions
    </div>
  </div>
</div>
`;
